--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,5 @@ repository = "https://github.com/SpaceManiac/opus-rs"
 documentation = "https://docs.rs/opus/0.3.0/opus"
 
 [dependencies]
-audiopus_sys = { version = "0.2.0", default-features = false,features = ["dynamic"]}
+audiopus_sys = { git="https://github.com/DCNick3/opus-rs",branch = "unsafe-libopus",default-features = false,features = ["unsafe-libopus-backend "]}
 libc = "0.2"
